<resources>
    <string name="app_name">HRTFitnessApp</string>
    <string name="login_header">HRT Fitness Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="post_survey">Thank you for your responses, We now have some insights as to what type of workouts will best accommodate your specific fitness goals.</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_nav_screen">NavScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Athletics">Athletics</string>
    <string name="info_Athletics">As an athlete your training is heavily dependent on your goals this can include speed and explosiveness or endurance training.</string>
    <string name="info_Athletics2">If you are more focused on strength and explosiveness plyometrics, core work and High Intensity Interval cardio are some solid options. However, if you are more concerned with building endurance the training should consist of long cardio sessions and progressively overloading the distance travelled and keeping track of nutrition and hydration during these sessions as well as static stretches to prevent injuries and stay durable. </string>
    <string name="menu_BBuilding">Body Building</string>
    <string name="info_BBuilding">Weight training and proper nutrition benefit mental sharpness. Working on your body and mind will serve you for years to come.
Like powerlifting bpdybuilding offers exercises which will make you stronger and more energetic.</string>
    <string name="info_BBuilding2">For bodybuilding the focus should be more so on higher volume and more reps rather than lifting a heavier load. However, this doesn\'t mean that there should be a low intensity either.
    Strive to pick a weight that can be done for a rep range of 8-12 for hypertrophy and also incorporate more isolation exercises in your program. </string>
    <string name="menu_PowerLifting">Powerlifing</string>
    <string name="title_PowerLifting">POWER LIFTING</string>
    <string name="info_PowerLifting"> The Deadlift, Squat, and Bench are some simple exercises that are considerably effective for building a strength base.</string>
    <string name="info_PowerLifting2">Ideally one should perform these movements 2-3 times per week for 5 sets of 5 reps at a weight that is of high intensity. However, Your focus should be on coordination and execution of the lift before adding additional weight in order to prevent major injuries.</string>
    <string name="menu_Tracker">Progress Tracker</string>

    <string name="survey_description1">This survey will give us a better understanding of your character and lifestyle</string>
    <string name="survey_description2">With this we will recommend training routines that might fit you the best</string>

    <string name="survey_question_1_header"> Question 1</string>
    <string name="survey_question_1"> Are the majority of your workouts:</string>
    <string name="survey_question_1a"> compound</string>
    <string name="survey_question_1b"> isolation</string>
    <string name="survey_question_1c"> cardio</string>
    <string name="survey_question_1d"> plyometrics</string>

    <string name="survey_question_2_header"> Question 2</string>
    <string name="survey_question_2">  How frequently are you training:</string>
    <string name="survey_question_2a"> 0 – 1 times a week</string>
    <string name="survey_question_2b"> 2 – 3 times a week</string>
    <string name="survey_question_2c"> 4 – 5 times a week</string>
    <string name="survey_question_2d"> 6 or more times a week</string>

    <string name="survey_question_3_header"> Question 3</string>
    <string name="survey_question_3"> How much cardiovascular activity do you partake in:</string>
    <string name="survey_question_3a"> none at all</string>
    <string name="survey_question_3b"> moderate</string>
    <string name="survey_question_3c"> daily/intense</string>

    <string name="survey_question_4_header"> Question 4</string>
    <string name="survey_question_4">  Which best describes your fitness goals:</string>
    <string name="survey_question_4a"> aesthetics</string>
    <string name="survey_question_4b"> functional strength </string>
    <string name="survey_question_4c"> explosive/agile abilities</string>
    <string name="survey_question_4d"> endurance trainings</string>

    <string name="survey_next_button"> Next</string>
    <string name="survey_prev_button"> Prev</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>