<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Athletics"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_Athletics" />
        <item
            android:id="@+id/nav_BBuilding"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_BBuilding" />
        <item
            android:id="@+id/nav_PowerLifting"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_PowerLifting" />
        <item
            android:id="@+id/nav_Tracker"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Tracker" />
    </group>
</menu>