<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_athletics">

    <fragment
        android:id="@+id/nav_athletics"
        android:name="com.example.hrtfitnessapp.ui.home.HomeFragment"
        android:label="@string/menu_Athletics"
        tools:layout="@layout/nav_screen_fragment_home" />

    <fragment
        android:id="@+id/nav_bbuilding"
        android:name="com.example.hrtfitnessapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_BBuilding"
        tools:layout="@layout/nav_fragment_gallery" />

    <fragment
        android:id="@+id/nav_powerlifting"
        android:name="com.example.hrtfitnessapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_PowerLifting"
        tools:layout="@layout/nav_screen_fragment_slideshow" />
    <fragment
        android:id="@+id/nav_tracker"
        android:name="com.example.hrtfitnessapp.ui.Tracker.TrackerFragment"
        android:label="@string/menu_Tracker" />
</navigation>